Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61078

QTcpSocket closes with "RemoteHostClosedError"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.9.0 RC
    • Network: Sockets
    • None
    • Windows 10, WinRT 32 bit debug/release
    • WinRT
    • 91ef71b7bf3526a0bb7f6f83e6b3e03e286c2030

      The QTcpSocket very often (and randomly) fails with "RemoteHostClosedError". This happens both with local IPs as well as remote servers. The attached example demonstrates the problem.

        For Gerrit Dashboard: QTBUG-61078
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            DanielSt Peter Staab
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes